# shikai-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: client.rs  connector.rs  lib.rs  main.rs
src/client/: codec.rs  connector.rs  payload.rs
src/client/codec/: gemtext.rs  response.rs
