[package]
name = "shikai"
version = "0.1.0"
authors = ["Igor Nikitin <rabbitinspace@icloud.com>"]
edition = "2018"

[dependencies]
futures-util = "0.3.5"
tokio = { version = "0.2.21", default-features = false, features = ["io-util", "dns", "tcp", "stream", "time"] }
bytes = "0.5.5"
bstr = "0.2.13"
async-native-tls = { version = "0.3.3", default-features = false, features = [ "runtime-tokio" ] }
async-trait = "0.1.36"
url = "2.1.1"
mime = "0.3.16"
